correction alignement haut works mobile

--- a/src/wp-content/themes/azc/resources/assets/styles/scss/_global.scss
+++ b/src/wp-content/themes/azc/resources/assets/styles/scss/_global.scss
@@ -72,6 +72,7 @@ body {
     margin-bottom: -21px;
     margin-top: 21px;
     line-height: 16px;
+    width: 100%;
     a,
     span {
         margin-right: 5px;
